corrected the navigation bar by lowering it

--- a/branding.html
+++ b/branding.html
@@ -82,7 +82,7 @@
 			position: absolute;
 			height : 0% ;
 			width: 100%;
-			bottom: 70%;
+			bottom: 55%;
 			left: 0;
 		}
 		
@@ -182,7 +182,7 @@
 		<div id="solid-line-1"></div>
              <div class="content-container">
               <header>
-		          <h1>Branding</h1>
+		          <h1>brands</h1>
                   <h2>From witchcraft and wizardry to superhumans and animated animals, explore our iconic brands across film, TV and games.</h2>
 	         </header>
                </div>
